syntax = "proto3";

package calc;
option go_package="calculator/pb";

message SumRequest {
    int64 firstInt = 1;
    int64 secondInt = 2;
}

message SumResponse {
    int64 result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime = 1;
}

message AverageRequest {
    int64 number = 1;
}

message AverageResponse {
    float average = 1;
}

message FindMaximumRequest {
    int64 number = 1;
}

message FindMaximumResponse {
    int64 currentMaximum = 1;
}

message SquareRootRequest {
    int64 number = 1;
}

message SquareRootResponse {
    double numberRoot = 1;
}

service CalcService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc DecomposePrimeNumber(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    rpc Average(stream AverageRequest) returns (AverageResponse) {};
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){};
}
